added somewhat of a login page (no function)

--- a/public/index.html
+++ b/public/index.html
@@ -8,5 +8,26 @@
     <title>Login Page</title>
 </head>
 <body>
+    <div class="login"> 
+        <form class="form" id="login-form">
+            <div id="login-text">Login</div>
+            <input class="input" type="text" id="username-input" placeholder="username">
+            <input class="input" type="text" id="password-input" placeholder="password">
+            <button>Submit</button>
+        </form>  
+        <form class="form" id="register-form">
+            <div id="register-text">Register</div>
+            <input class="input" type="text" id="first-name-input" placeholder="first name">
+            <input class="input" type="text" id="last-name-input" placeholder="last name">
+            <input class="input" type="text" id="email-input" placeholder="email">
+            <input class="input" type="text" id="username-input" placeholder="username">
+            <input class="input" type="text" id="password-input" placeholder="password">
+            <button>Submit</button>
+        </form> 
+    </div>
+    <div class="register">
+        <form class="register-form"></form>
+    </div>
+    <a class="footing" href="http://www.freepik.com">Designed by gstudioimagen / Freepik</a>
 </body>
 </html>
