--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -9,21 +9,20 @@
 </head>
 <body>
     <div class="navbar">
-        <button class="home-btn"><i></i></button>>
+        <a class="home-btn" href=""></a>
     </div>
     <div class="flexbox-container1">
         <div class="flexbox-profile-pic"></div>
         <div class="flexbox-info"></div>
     </div>
     <div class="flexbox-container2">
-        <div class="flexbox-game-list">
-            <div class="game"></div>
-            <div class="game"></div>
-            <div class="game"></div>
-            <div class="game"></div>
-            <div class="game"></div>
-            <div class="game"></div>
-        </div>
+        <div class="game"></div>
+        <div class="game"></div>
+        <div class="game"></div>
+        <div class="game"></div>
+        <div class="game"></div>
+        <div class="game"></div>
+        
     </div>
 </body>
 </html>
