navbar layout paint -Dan

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <div class="home-btn" href=""></div>
+        <div class="home-btn" href="./assets/img/home-icon.png"></div>
     </div>
 </body>
 </html>
