hard reset dans-branch and had to revert and update changes -Dan

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -11,5 +11,27 @@
     <div class="navbar">
         <div class="home-btn" href="./assets/img/home-icon.png"></div>
     </div>
+    <div class="elder-flex">
+        <div class="flexbox-container1">
+            <div class="game">
+                <a class="link-to-game">Go To Page</a>
+            </div>
+            <div class="game">
+                <a class="link-to-game">Go To Page</a>
+            </div>
+            <div class="game">
+                <a class="link-to-game">Go To Page</a>
+            </div>
+            <div class="game">
+                <a class="link-to-game">Go To Page</a>
+            </div>
+            <div class="game">
+                <a class="link-to-game">Go To Page</a>
+            </div>
+            <div class="game" id="game-6">
+                <a class="link-to-game" href="./index.html">Go To Page</a>
+            </div>    
+        </div>
+    </div>
 </body>
 </html>
