in this update, I update the game pictures. Also i added a few more games with more HTML

--- a/public/homepage.html
+++ b/public/homepage.html
@@ -53,42 +53,76 @@
       <div class="contentBx">
         <h2>About Us</h2>
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+          aliquip ex ea commodo consequat. Duis aute irure dolor in
+          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+          culpa qui officia deserunt mollit anim id est laborum.
         </p>
         <a href="#">Read More</a>
       </div>
-      <img src="assets/img/ODST_-_Empty_Background (1).webp" alt="">
+      <img src="assets/img/ODST_-_Empty_Background (1).webp" alt="" />
     </div>
-
-    
 
     <!-- Games -->
-<div class="games">
-    <h2>Popular Games</h2>
-    <ul>
-       <li class="list active" >All</li>
-       <li class="list">Pc Games</li>
-       <li class="list">Console Games</li>
-    </ul>
-    <div class="cardBx">
+    <div class="games">
+      <h2>Popular Games</h2>
+      <ul>
+        <li class="list active">All</li>
+        <li class="list">Pc Games</li>
+        <li class="list">Console Games</li>
+      </ul>
+      <div class="cardBx">
         <div class="card" data-item="pc">
-            <img src="assets/img/game-1.jfif" alt="">
-            <div class="content">
-                <h4>Game Name</h4>
-                <div class="process-line"><span></span></div>
-                <div class="info">
-
-                </div>
-            </div>
+          <img src="assets/img/game-1.jfif" alt="" />
+          <div class="content">
+            <h4>Modern Warfare 2</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
+          </div>
         </div>
+        <div class="card" data-item="pc">
+          <img src="assets/img/game-2.jpg" alt="" />
+          <div class="content">
+            <h4>Forza Horizon 5</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="card" data-item="pc">
+            <img src="assets/img/game-3.jfif" alt="" />
+            <div class="content">
+              <h4>Microsoft Flight Simulator</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="pc">
+            <img src="assets/img/game-4.jfif" alt="" />
+            <div class="content">
+              <h4>Halo Infinite</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="pc">
+            <img src="assets/img/game-5.jfif" alt="" />
+            <div class="content">
+              <h4>Halo Infinite</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+      </div>
     </div>
-</div>
     <script>
-        /*Sticky NavBar*/
-        window.addEventListener('scroll',function(){
-            var header = document.querySelector('header');
-            header.classList.toggle('sticky',window.scrollY > 0);
-        });
+      /*Sticky NavBar*/
+      window.addEventListener("scroll", function () {
+        var header = document.querySelector("header");
+        header.classList.toggle("sticky", window.scrollY > 0);
+      });
     </script>
   </body>
 </html>
