--- a/public/homepage.html
+++ b/public/homepage.html
@@ -70,12 +70,12 @@
     <div class="games">
       <h2>Popular Games</h2>
       <ul>
-        <li class="list active">All</li>
-        <li class="list">Pc Games</li>
-        <li class="list">Console Games</li>
+        <li class="list active" data-filter="all">All</li>
+        <li class="list" data-filter="pc">Pc Games</li>
+        <li class="list" data-filter="console games">Console Games</li>
       </ul>
       <div class="cardBx">
-        <div class="card" data-item="pc">
+        <div class="card" data-item="all">
           <img src="assets/img/game-1.jfif" alt="" />
           <div class="content">
             <h4>Modern Warfare 2</h4>
@@ -83,7 +83,7 @@
             <div class="info"></div>
           </div>
         </div>
-        <div class="card" data-item="pc">
+        <div class="card" data-item="all">
           <img src="assets/img/game-2.jpg" alt="" />
           <div class="content">
             <h4>Forza Horizon 5</h4>
@@ -92,29 +92,61 @@
           </div>
         </div>
         <div class="card" data-item="pc">
-            <img src="assets/img/game-3.jfif" alt="" />
-            <div class="content">
-              <h4>Microsoft Flight Simulator</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
+          <img src="assets/img/game-3.jfif" alt="" />
+          <div class="content">
+            <h4>Microsoft Flight Simulator</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
           </div>
-          <div class="card" data-item="pc">
-            <img src="assets/img/game-4.jfif" alt="" />
-            <div class="content">
-              <h4>Halo Infinite</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
+        </div>
+        <div class="card" data-item="console">
+          <img src="assets/img/game-4.jfif" alt="" />
+          <div class="content">
+            <h4>Halo Infinite</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
           </div>
-          <div class="card" data-item="pc">
-            <img src="assets/img/game-5.jfif" alt="" />
-            <div class="content">
-              <h4>Halo Infinite</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
+        </div>
+        <div class="card" data-item="pc">
+          <img src="assets/img/game-5.jfif" alt="" />
+          <div class="content">
+            <h4>DayZ</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
           </div>
+        </div>
+        <div class="card" data-item="pc">
+          <img src="assets/img/game-6.jpg" alt="" />
+          <div class="content">
+            <h4>Lost Ark</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="card" data-item="all">
+          <img src="assets/img/game-7.jpg" alt="" />
+          <div class="content">
+            <h4>Battlefield 2042</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="card" data-item="all">
+          <img src="assets/img/game-8.jpg" alt="" />
+          <div class="content">
+            <h4>Fortnite</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
+          </div>
+        </div>
+        <div class="card" data-item="all">
+          <img src="assets/img/game-9.jfif" alt="" />
+          <div class="content">
+            <h4>God Of War</h4>
+            <div class="process-line"><span></span></div>
+            <div class="info"></div>
+          </div>
+        </div>
       </div>
     </div>
     <script>
@@ -123,6 +155,31 @@
         var header = document.querySelector("header");
         header.classList.toggle("sticky", window.scrollY > 0);
       });
+
+      /* Filterable Cards*/
+      let list = document.querySelectorAll(".list");
+      let card = document.querySelectorAll(".card");
+
+      for (let i = 0; i < list.length; i++) {
+        list[i].addEventListener("click", function () {
+          for (let j = 0; j < list.length; j++) {
+            list[j].classList.remove("active");
+          }
+          this.classList.add("active");
+
+          let dataFilter = this.getAttribute("data-filter");
+
+          for (let k = 0; k < card.length; k++) {
+            card[k].classList.remove("active");
+            card[k].classList.add("hide");
+
+            if(card[k].getAttribute('data-item') == dataFilter || dataFilter == 'all'){
+                card[k].classList.remove("hide");
+                card[k].classList.add("active");
+            }
+          }
+        });
+      }
     </script>
   </body>
 </html>
