--- a/public/homepage.html
+++ b/public/homepage.html
@@ -70,7 +70,7 @@
     <div class="games">
       <h2>Popular Games</h2>
       <ul>
-        <li class="list active" data-filter="all">All</li>
+        <li class="list active" data-filter="all">All Games</li>
         <li class="list" data-filter="pc">Pc Games</li>
         <li class="list" data-filter="console games">Console Games</li>
       </ul>
@@ -99,7 +99,7 @@
             <div class="info"></div>
           </div>
         </div>
-        <div class="card" data-item="console">
+        <div class="card" data-item="console games">
           <img src="assets/img/game-4.jfif" alt="" />
           <div class="content">
             <h4>Halo Infinite</h4>
@@ -147,8 +147,19 @@
             <div class="info"></div>
           </div>
         </div>
+        <div class="card" data-item="console games">
+            <img src="assets/img/game-10.jfif" alt="" />
+            <div class="content">
+              <h4>Halo Infinite</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
       </div>
     </div>
+
+
+    
     <script>
       /*Sticky NavBar*/
       window.addEventListener("scroll", function () {
@@ -173,9 +184,12 @@
             card[k].classList.remove("active");
             card[k].classList.add("hide");
 
-            if(card[k].getAttribute('data-item') == dataFilter || dataFilter == 'all'){
-                card[k].classList.remove("hide");
-                card[k].classList.add("active");
+            if (
+              card[k].getAttribute("data-item") == dataFilter ||
+              dataFilter == "all"
+            ) {
+              card[k].classList.remove("hide");
+              card[k].classList.add("active");
             }
           }
         });
