added register page so info will save to database -Dan

--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,14 @@
                 <input class="input" type="text" id="last-name-input" placeholder="last name">
                 <input class="input" type="text" id="email-input" placeholder="email">
                 <input class="input" type="text" id="username-input" placeholder="username">
-                <input class="input" type="text" id="password-input" placeholder="password"></div>
-
-            <button class="btn" id="register-btn">Register</button>
+                <input class="input" type="password" id="password-input" placeholder="password">
+            </div>
+            <button type="button" class="btn" id="register-btn">Register</button>
             <div class="login-link">Already have an account?<a href="./login.html"> Log in.</a></div>
         </form> 
     </div>
     <a class="footing" href="http://www.freepik.com">Background Designed by gstudioimagen / Freepik</a>
+<script src="./assets/js/register-logic.js"></script>
 </body>
+
 </html>
