--- a/public/homepage.html
+++ b/public/homepage.html
@@ -26,7 +26,7 @@
           <input type="text" placeholder="Search Games" />
         </div>
       </div>
-      <div class="toggleMenu" onclick="toggleMenu();"></div>
+      <div class="toggleMenu" onclick="toggleMenu()"></div>
     </header>
 
     <!-- Home Banner -->
@@ -166,12 +166,12 @@
       });
 
       /* Responsive Navbar*/
-      function toggleMenu() {
-        const toggleMenu = document.querySelector("toggleMenu");
-        const nav = document.querySelector('nav');
-        toggleMenu.classList.toggle('active')
-        nav.classList.toggle('toggle')
-      }
+      // function toggleMenu() {
+      //   const toggleMenu = document.querySelector("toggleMenu");
+      //   const nav = document.querySelector('nav');
+      //   toggleMenu.classList.toggle('active')
+      //   nav.classList.toggle('toggle')
+      // }
 
       /* Filterable Cards*/
       let list = document.querySelectorAll(".list");
