--- a/public/homepage.html
+++ b/public/homepage.html
@@ -26,7 +26,7 @@
           <input type="text" placeholder="Search Games" />
         </div>
       </div>
-      <div class="toggleMenu" onclick="toggleMenu()"></div>
+      <!-- <div class="toggleMenu" onclick="toggleMenu()"></div> -->
     </header>
 
     <!-- Home Banner -->
