added id and padding to the 'about us' portion of the home page so the internal href would take user to that part of the page -Dan

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <a href="#" class="logo">Gamers</a>
       <ul class="nav">
         <li><a href="/Room-5/public/">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="#about-us">About</a></li>
         <li><a href="#games">Games</a></li>
         <li><a href="#">Login</a></li>
       </ul>
@@ -51,7 +51,7 @@
     <!-- About -->
     <div class="about">
       <div class="contentBx">
-        <h2>About Us</h2>
+        <h2 id="about-us">About Us</h2>
         <p>
           Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
