added options for user to select their games -Isain

--- a/public/register.html
+++ b/public/register.html
@@ -17,6 +17,12 @@
                 <input class="input" type="text" id="email-input" placeholder="email">
                 <input class="input" type="text" id="username-input" placeholder="username">
                 <input class="input" type="password" id="password-input" placeholder="password">
+                <input class="input" type="text" id="bio" maxlength="300" placeholder="bio">
+                <div class="big-text" id="gamelist-text">Select 4 games</div>
+                <input class="input" type="text" id="game1" placeholder="game1">
+                <input class="input" type="text" id="game2" placeholder="game2">
+                <input class="input" type="text" id="game3" placeholder="game3">
+                <input class="input" type="text" id="game4" placeholder="game4">
             </div>
             <button type="button" class="btn" id="register-btn">Register</button>
             <div class="login-link">Already have an account?<a href="./login.html"> Log in.</a></div>
