--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,10 @@
     <header>
       <a href="#" class="logo">Gamers</a>
       <ul class="nav">
-        <li><a href="/Room-5/public/">Home</a></li>
+        <li><a href="/">Home</a></li>
         <li><a href="#about-us">About</a></li>
         <li><a href="#games">Games</a></li>
-        <li><a href="#">Login</a></li>
+        <li><a type="button" id="logout-btn" href="/register">Logout</a></li>
       </ul>
       <div class="action">
         <div class="searchBx">
