--- a/public/games.html
+++ b/public/games.html
@@ -1,104 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/user.css">
-    <title>User Profile</title>
-</head>
-<body>
-    
-    <div class="games">
-        <h2>Popular Games</h2>
-        <ul>
-          <li class="list active" data-filter="all">All Games</li>
-          <li class="list" data-filter="pc">Pc Games</li>
-          <li class="list" data-filter="console games">Console Games</li>
-        </ul>
-        <div class="cardBx">
-          <div class="card" data-item="all">
-            <img src="assets/img/game-1.jfif" alt="" />
-            <div class="content">
-              <h4>Modern Warfare 2</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="all">
-            <img src="assets/img/game-2.jpg" alt="" />
-            <div class="content">
-              <h4>Forza Horizon 5</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="pc">
-            <img src="assets/img/game-3.jfif" alt="" />
-            <div class="content">
-              <h4>Microsoft Flight Simulator</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="console games">
-            <img src="assets/img/game-4.jfif" alt="" />
-            <div class="content">
-              <h4>Halo Infinite</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="pc">
-            <img src="assets/img/game-5.jfif" alt="" />
-            <div class="content">
-              <h4>DayZ</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="pc">
-            <img src="assets/img/game-6.jpg" alt="" />
-            <div class="content">
-              <h4>Lost Ark</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="all">
-            <img src="assets/img/game-7.jpg" alt="" />
-            <div class="content">
-              <h4>Battlefield 2042</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="all">
-            <img src="assets/img/game-8.jpg" alt="" />
-            <div class="content">
-              <h4>Fortnite</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="all">
-            <img src="assets/img/game-9.jfif" alt="" />
-            <div class="content">
-              <h4>God Of War</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-          <div class="card" data-item="console games">
-            <img src="assets/img/game-10.jfif" alt="" />
-            <div class="content">
-              <h4>Halo Infinite</h4>
-              <div class="process-line"><span></span></div>
-              <div class="info"></div>
-            </div>
-          </div>
-        </div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/gamepage.css" />
+    <title>Game Page</title>
+  </head>
+
+  <body>
+    <section class="container">
+      <div class="card">
+        <div class="card-image card-1"></div>
+        <h2>Modern Warfare 2</h2>
+        <p>Existing Modern Warfare® II Digital Standard Edition owners can upgrade to the Vault Edition as part of a limited time offer.Welcome to the new era of Call of Duty®.Call of Duty®: Modern Warfare® II drops players into an unprecedented global conflict that features the return of the iconic Operators of Task Force 141. From small-scale, high-stakes infiltration tactical ops to highly classified missions, players will deploy alongside friends in a truly immersive experience.Infinity Ward brings fans state-of-the-art gameplay, with all-new gun handling, advanced AI system, a new Gunsmith and a suite of other gameplay and graphical innovations that elevate the franchise to new heights.Modern Warfare® II launches with a globe-trotting single-player campaign, immersive Multiplayer combat and a narrative-driven, co-op Special Ops experience.</p>
       </div>
-    
-</body>
+      <div class="card">
+        <div class="card-image card-2"></div>
+        <h2>Forza Horizon 5</h2>
+        <p>Text</p>
+      </div>
+      <div class="card">
+        <div class="card-image card-3"></div>
+        <h2>Microsoft Flight Simulator</h2>
+        <p>Text</p>
+      </div>
+    </section>
+  </body>
 </html>
