--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -12,7 +12,7 @@
 
     
     
-    <!-- <!-- <div class="navbar">
+    <!-- <div class="navbar">
         <a class="home-btn" href=""></a>
     </div>
     <div class="flexbox-container1">
