this has all style for user profile

--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -49,6 +49,97 @@
           </div>
         </div>
       </nav>
+      <!-- Games -->
+    <div class="games">
+        <h2>Popular Games</h2>
+        <ul>
+          <li class="list active" data-filter="all">All Games</li>
+          <li class="list" data-filter="pc">Pc Games</li>
+          <li class="list" data-filter="console games">Console Games</li>
+        </ul>
+        <div class="cardBx">
+          <div class="card" data-item="all">
+            <img src="assets/img/game-1.jfif" alt="" />
+            <div class="content">
+              <h4>Modern Warfare 2</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="all">
+            <img src="assets/img/game-2.jpg" alt="" />
+            <div class="content">
+              <h4>Forza Horizon 5</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="pc">
+            <img src="assets/img/game-3.jfif" alt="" />
+            <div class="content">
+              <h4>Microsoft Flight Simulator</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="console games">
+            <img src="assets/img/game-4.jfif" alt="" />
+            <div class="content">
+              <h4>Halo Infinite</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="pc">
+            <img src="assets/img/game-5.jfif" alt="" />
+            <div class="content">
+              <h4>DayZ</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="pc">
+            <img src="assets/img/game-6.jpg" alt="" />
+            <div class="content">
+              <h4>Lost Ark</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="all">
+            <img src="assets/img/game-7.jpg" alt="" />
+            <div class="content">
+              <h4>Battlefield 2042</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="all">
+            <img src="assets/img/game-8.jpg" alt="" />
+            <div class="content">
+              <h4>Fortnite</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="all">
+            <img src="assets/img/game-9.jfif" alt="" />
+            <div class="content">
+              <h4>God Of War</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+          <div class="card" data-item="console games">
+            <img src="assets/img/game-10.jfif" alt="" />
+            <div class="content">
+              <h4>Halo Infinite</h4>
+              <div class="process-line"><span></span></div>
+              <div class="info"></div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
 
     <script src="assets/js/user.js"></script>
