--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,9 @@
     <header>
       <a href="#" class="logo">Gamers</a>
       <ul class="nav">
-        <li><a href="/Room-5/public/">Home</a></li>
-        <li><a href="#about-us">About</a></li>
-        <li><a href="#games">Games</a></li>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Games</a></li>
         <li><a href="#">Login</a></li>
       </ul>
       <div class="action">
@@ -34,13 +34,12 @@
       <div class="bg">
         <div class="content">
           <h2>
-            A New Home for<br />
+            A Home for
             Game Lovers
           </h2>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam.
+            Welcome to Gamers. A website to keep track of all of you favorite games <br>
+            Join today to start your gaming experience
           </p>
           <a href="#" class="btn">Join Now</a>
         </div>
