this has stlye to games page nav bar

--- a/public/index.html
+++ b/public/index.html
@@ -33,12 +33,10 @@
     <div class="banner">
       <div class="bg">
         <div class="content">
-          <h2>
-            A Home for
-            Game Lovers
-          </h2>
+          <h2>A Home for Game Lovers</h2>
           <p>
-            Welcome to Gamers. A website to keep track of all of you favorite games <br>
+            Welcome to Gamers. A website to keep track of all of you favorite
+            games <br />
             Join today to start your gaming experience
           </p>
           <a href="#" class="btn">Join Now</a>
@@ -156,6 +154,6 @@
         </div>
       </div>
     </div>
-<script src="assets/js/home-page-logic.js"></script>
+    <script src="assets/js/home-page-logic.js"></script>
   </body>
 </html>
