--- a/public/user-profile.html
+++ b/public/user-profile.html
@@ -18,39 +18,41 @@
         </ul>
         <img
           src="assets/img/iconmonstr-user-circle-thin-96.png"
-          class="user-pic" onclick="toggleMenu()"/>
+          class="user-pic"
+          onclick="toggleMenu()"
+        />
         <div class="sub-menu-wrap" id="subMenu">
           <div class="sub-menu">
             <div class="user-info">
-              <img src="assets/img/iconmonstr-user-circle-thin-96.png"  />
+              <img src="assets/img/iconmonstr-user-circle-thin-96.png" />
               <h3>Isain Ibarra</h3>
             </div>
-            <hr>
+            <hr />
             <a href="#" class="sub-menu-link">
-                <img src="assets/img/iconmonstr-user-circle-thin-96.png" >
-                <p>Edit Profile</p>
-                <span>></span>
+              <img src="assets/img/iconmonstr-user-circle-thin-96.png" />
+              <p>Edit Profile</p>
+              <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
-                <img src="assets/img/iconmonstr-gear-thin-24.png" >
-                <p>Settings & Privacy</p>
-                <span>></span>
+              <img src="assets/img/iconmonstr-gear-thin-24.png" />
+              <p>Settings & Privacy</p>
+              <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
-                <img src="assets/img/iconmonstr-help-6-24.png" >
-                <p>Help & Support</p>
-                <span>></span>
+              <img src="assets/img/iconmonstr-help-6-24.png" />
+              <p>Help & Support</p>
+              <span>></span>
             </a>
             <a href="#" class="sub-menu-link">
-                <img src="assets/img/iconmonstr-log-out-3-24.png" >
-                <p>Logout</p>
-                <span>></span>
+              <img src="assets/img/iconmonstr-log-out-3-24.png" />
+              <p>Logout</p>
+              <span>></span>
             </a>
           </div>
         </div>
       </nav>
       <!-- Games -->
-    <div class="games">
+      <div class="games">
         <h2>Popular Games</h2>
         <ul>
           <li class="list active" data-filter="all">All Games</li>
