--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <a href="#" class="logo">Gamers</a>
       <ul class="nav">
         <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#about-us">About</a></li>
         <li><a href="#">Games</a></li>
         <li><a href="#">Login</a></li>
       </ul>
