updated description on about

--- a/public/index.html
+++ b/public/index.html
@@ -44,26 +44,6 @@
         <img src="assets/img/Battlefield-PNG-Image.png" />
       </div>
     </div>
-
-    <!-- About -->
-    <div class="about">
-      <div class="contentBx">
-        <h2 id="about-us">About Us</h2>
-        <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <a href="#">Read More</a>
-      </div>
-      <img src="assets/img/ODST_-_Empty_Background (1).webp" alt="" />
-    </div>
-
-    <!-- Games -->
     <div class="games">
       <h2>Popular Games</h2>
       <ul>
@@ -154,6 +134,20 @@
         </div>
       </div>
     </div>
+    <!-- About -->
+    <div class="about">
+      <div class="contentBx">
+        <h2 id="about-us">About Us</h2>
+        <p>
+          Gamer Hubs are collections of game-centric discussions, workshop items, screenshots, videos, and news. It’s both community created and official content, as rated by you, Gamers users.
+        </p>
+        <a href="#">Read More</a>
+      </div>
+      <img src="assets/img/ODST_-_Empty_Background (1).webp" alt="" />
+    </div>
+
+    <!-- Games -->
+    
     <script src="assets/js/home-page-logic.js"></script>
   </body>
 </html>
