--- a/public/games.html
+++ b/public/games.html
@@ -10,7 +10,7 @@
   <header>
     <a href="#" class="logo">Gamers</a>
     <ul class="nav">
-      <li><a href="#">Home</a></li>
+      <li><a href="#home">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="#">Games</a></li>
       <li><a href="#">Login</a></li>
