--- a/public/games.html
+++ b/public/games.html
@@ -102,7 +102,7 @@
     </div>
     
   </header>
-  <body>
+  <!-- <body>
     <section class="container">
       <div class="card">
         <div class="card-image card-1"></div>
@@ -174,6 +174,6 @@
           ground in the genre.
         </p>
       </div>
-    </section>
+    </section> -->
   </body>
 </html>
